--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "d3-shape": "^1.2.0",
     "d3-svg-legend": "^2.24.1",
     "d3-transition": "^1.1.0",
+    "d3-zoom": "^1.5.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.11"
